output/src/tac_simulator/flex_bison/language.output
Terminals unused in grammar

    TOKENS_START
    '('
    ')'
    '{'
    '}'
    TOKENS_END
    '='
    UMINUS
    UOPNOT


Grammar

    0 $accept: start $end

    1 start: program

    2 program: statement

    3 statement: %empty
    4          | _SEPARATOR statement
    5          | ident ':' _SEPARATOR statement
    6          | ident ':' _ARRAYTYPE operand ',' _BYTEARRAYTYPE ',' operand _SEPARATOR statement
    7          | ident ':' _ARRAYTYPE operand ',' _WORDARRAYTYPE ',' operand _SEPARATOR statement
    8          | ident ':' _ARRAYTYPE operand ',' _LONGARRAYTYPE ',' operand _SEPARATOR statement
    9          | ident ':' _ARRAYTYPE operand ',' _DOUBLEARRAYTYPE ',' operand _SEPARATOR statement
   10          | ident ':' _ARRAYTYPE operand ',' _ASCIIARRAYTYPE ',' operand _SEPARATOR statement
   11          | ident ':' _WORDTYPE iconst _SEPARATOR statement
   12          | ident ':' _LONGTYPE iconst _SEPARATOR statement
   13          | ident ':' _DOUBLETYPE dconst _SEPARATOR statement
   14          | ident ':' _BYTETYPE cconst _SEPARATOR statement
   15          | ident ':' _ASCIITYPE sconst _SEPARATOR statement
   16          | ident _IS binop _SEPARATOR statement
   17          | ident _IS operand _SEPARATOR statement
   18          | ident _IS unops _SEPARATOR statement
   19          | ident _IS arrunops _SEPARATOR statement
   20          | ident _IS arrayelement _SEPARATOR statement
   21          | arrayelement _IS unops _SEPARATOR statement
   22          | arrayelement _IS operand _SEPARATOR statement
   23          | tident _IS binop _SEPARATOR statement
   24          | tident _IS operand _SEPARATOR statement
   25          | tident _IS unops _SEPARATOR statement
   26          | tident _IS arrunops _SEPARATOR statement
   27          | tident _IS arrayelement _SEPARATOR statement
   28          | _PUTPARAM operand _SEPARATOR statement
   29          | _PUTPARAM arrayelement _SEPARATOR statement
   30          | _CALL wfunc ',' iconst _SEPARATOR statement
   31          | tident _IS _CALL rfunc ',' iconst _SEPARATOR statement
   32          | ident _IS _CALL rfunc ',' iconst _SEPARATOR statement
   33          | tident _IS _CALL convfunc ',' iconst _SEPARATOR statement
   34          | ident _IS _CALL convfunc ',' iconst _SEPARATOR statement
   35          | tident _IS _CALL ident ',' iconst _SEPARATOR statement
   36          | ident _IS _CALL ident ',' iconst _SEPARATOR statement
   37          | _CALL ident ',' iconst _SEPARATOR statement
   38          | _GOTO ident _SEPARATOR statement
   39          | _GETPARAM ident _SEPARATOR statement
   40          | _GETPARAM tident _SEPARATOR statement
   41          | _GETPARAM arrayelement _SEPARATOR statement
   42          | _RETURN operand _SEPARATOR statement
   43          | _RETURN arrayelement _SEPARATOR statement
   44          | _IFFALSE ident _GOTO ident _SEPARATOR statement
   45          | _IFTRUE ident _GOTO ident _SEPARATOR statement
   46          | _IFFALSE tident _GOTO ident _SEPARATOR statement
   47          | _IFTRUE tident _GOTO ident _SEPARATOR statement
   48          | _IFFALSE arrayelement _GOTO ident _SEPARATOR statement
   49          | _IFTRUE arrayelement _GOTO ident _SEPARATOR statement

   50 binop: operand '+' operand
   51      | operand '-' operand
   52      | operand '*' operand
   53      | operand '/' operand
   54      | operand '%' operand
   55      | operand '>' operand
   56      | operand '<' operand
   57      | operand '^' operand
   58      | operand _GEQ operand
   59      | operand _LEQ operand
   60      | operand _EQ operand
   61      | operand _NEQ operand
   62      | operand _AND operand
   63      | operand _OR operand

   64 unops: '-' operand
   65      | '!' operand

   66 arrunops: '-' arrayelement
   67         | '!' arrayelement

   68 convfunc: _TOASCII
   69         | _TOBYTE
   70         | _TODOUBLE
   71         | _TOLONG
   72         | _TOWORD

   73 wfunc: _IWRITE
   74      | _FWRITE
   75      | _CWRITE
   76      | _SWRITE

   77 rfunc: _IREAD
   78      | _FREAD
   79      | _CREAD
   80      | _SREAD

   81 arrayelement: ident '[' iconst ']'
   82             | ident '[' ident ']'
   83             | ident '[' tident ']'

   84 ident: _ID

   85 tident: _IDTEMP

   86 iconst: _ICONST

   87 dconst: _DCONST
   88       | _DCONSTE

   89 cconst: _CCONST

   90 sconst: _SCONST

   91 operand: ident
   92        | tident
   93        | _CCONST
   94        | _SCONST
   95        | _ICONST
   96        | _DCONST
   97        | _DCONSTE


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 65 67
    '%' (37) 54
    '(' (40)
    ')' (41)
    '*' (42) 52
    '+' (43) 50
    ',' (44) 6 7 8 9 10 30 31 32 33 34 35 36 37
    '-' (45) 51 64 66
    '/' (47) 53
    ':' (58) 5 6 7 8 9 10 11 12 13 14 15
    '<' (60) 56
    '=' (61)
    '>' (62) 55
    '[' (91) 81 82 83
    ']' (93) 81 82 83
    '^' (94) 57
    '{' (123)
    '}' (125)
    error (256)
    TOKENS_START (258)
    _ID (259) 84
    _IDTEMP (260) 85
    _DCONST (261) 87 96
    _DCONSTE (262) 88 97
    _ICONST (263) 86 95
    _CCONST (264) 89 93
    _SCONST (265) 90 94
    _ARRAYTYPE (266) 6 7 8 9 10
    _BYTETYPE (267) 14
    _WORDTYPE (268) 11
    _LONGTYPE (269) 12
    _DOUBLETYPE (270) 13
    _ASCIITYPE (271) 15
    _BYTEARRAYTYPE (272) 6
    _WORDARRAYTYPE (273) 7
    _LONGARRAYTYPE (274) 8
    _DOUBLEARRAYTYPE (275) 9
    _ASCIIARRAYTYPE (276) 10
    _TOASCII (277) 68
    _TOBYTE (278) 69
    _TOWORD (279) 72
    _TOLONG (280) 71
    _TODOUBLE (281) 70
    _IFTRUE (282) 45 47 49
    _IFFALSE (283) 44 46 48
    _GOTO (284) 38 44 45 46 47 48 49
    _PUTPARAM (285) 28 29
    _GETPARAM (286) 39 40 41
    _CALL (287) 30 31 32 33 34 35 36 37
    _RETURN (288) 42 43
    _IWRITE (289) 73
    _FWRITE (290) 74
    _CWRITE (291) 75
    _SWRITE (292) 76
    _IREAD (293) 77
    _FREAD (294) 78
    _CREAD (295) 79
    _SREAD (296) 80
    _SEPARATOR (297) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    TOKENS_END (298)
    _EQ (299) 60
    _NEQ (300) 61
    _GEQ (301) 58
    _LEQ (302) 59
    _AND (303) 62
    _OR (304) 63
    _IS (305) 16 17 18 19 20 21 22 23 24 25 26 27 31 32 33 34 35 36
    UMINUS (306)
    UOPNOT (307)


Nonterminals, with rules where they appear

    $accept (71)
        on left: 0
    start (72)
        on left: 1
        on right: 0
    program (73)
        on left: 2
        on right: 1
    statement (74)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 2 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    binop (75)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 16 23
    unops (76)
        on left: 64 65
        on right: 18 21 25
    arrunops (77)
        on left: 66 67
        on right: 19 26
    convfunc (78)
        on left: 68 69 70 71 72
        on right: 33 34
    wfunc (79)
        on left: 73 74 75 76
        on right: 30
    rfunc (80)
        on left: 77 78 79 80
        on right: 31 32
    arrayelement (81)
        on left: 81 82 83
        on right: 20 21 22 27 29 41 43 48 49 66 67
    ident (82)
        on left: 84
        on right: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 32 34 35 36 37 38 39 44 45 46 47 48 49 81 82 83 91
    tident (83)
        on left: 85
        on right: 23 24 25 26 27 31 33 35 40 46 47 83 92
    iconst (84)
        on left: 86
        on right: 11 12 30 31 32 33 34 35 36 37 81
    dconst (85)
        on left: 87 88
        on right: 13
    cconst (86)
        on left: 89
        on right: 14
    sconst (87)
        on left: 90
        on right: 15
    operand (88)
        on left: 91 92 93 94 95 96 97
        on right: 6 7 8 9 10 17 22 24 28 42 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65


State 0

    0 $accept: • start $end

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    start         go to state 11
    program       go to state 12
    statement     go to state 13
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 1

   84 ident: _ID •

    $default  reduce using rule 84 (ident)


State 2

   85 tident: _IDTEMP •

    $default  reduce using rule 85 (tident)


State 3

   45 statement: _IFTRUE • ident _GOTO ident _SEPARATOR statement
   47          | _IFTRUE • tident _GOTO ident _SEPARATOR statement
   49          | _IFTRUE • arrayelement _GOTO ident _SEPARATOR statement

    _ID      shift, and go to state 1
    _IDTEMP  shift, and go to state 2

    arrayelement  go to state 17
    ident         go to state 18
    tident        go to state 19


State 4

   44 statement: _IFFALSE • ident _GOTO ident _SEPARATOR statement
   46          | _IFFALSE • tident _GOTO ident _SEPARATOR statement
   48          | _IFFALSE • arrayelement _GOTO ident _SEPARATOR statement

    _ID      shift, and go to state 1
    _IDTEMP  shift, and go to state 2

    arrayelement  go to state 20
    ident         go to state 21
    tident        go to state 22


State 5

   38 statement: _GOTO • ident _SEPARATOR statement

    _ID  shift, and go to state 1

    ident  go to state 23


State 6

   28 statement: _PUTPARAM • operand _SEPARATOR statement
   29          | _PUTPARAM • arrayelement _SEPARATOR statement

    _ID       shift, and go to state 1
    _IDTEMP   shift, and go to state 2
    _DCONST   shift, and go to state 24
    _DCONSTE  shift, and go to state 25
    _ICONST   shift, and go to state 26
    _CCONST   shift, and go to state 27
    _SCONST   shift, and go to state 28

    arrayelement  go to state 29
    ident         go to state 30
    tident        go to state 31
    operand       go to state 32


State 7

   39 statement: _GETPARAM • ident _SEPARATOR statement
   40          | _GETPARAM • tident _SEPARATOR statement
   41          | _GETPARAM • arrayelement _SEPARATOR statement

    _ID      shift, and go to state 1
    _IDTEMP  shift, and go to state 2

    arrayelement  go to state 33
    ident         go to state 34
    tident        go to state 35


State 8

   30 statement: _CALL • wfunc ',' iconst _SEPARATOR statement
   37          | _CALL • ident ',' iconst _SEPARATOR statement

    _ID      shift, and go to state 1
    _IWRITE  shift, and go to state 36
    _FWRITE  shift, and go to state 37
    _CWRITE  shift, and go to state 38
    _SWRITE  shift, and go to state 39

    wfunc  go to state 40
    ident  go to state 41


State 9

   42 statement: _RETURN • operand _SEPARATOR statement
   43          | _RETURN • arrayelement _SEPARATOR statement

    _ID       shift, and go to state 1
    _IDTEMP   shift, and go to state 2
    _DCONST   shift, and go to state 24
    _DCONSTE  shift, and go to state 25
    _ICONST   shift, and go to state 26
    _CCONST   shift, and go to state 27
    _SCONST   shift, and go to state 28

    arrayelement  go to state 42
    ident         go to state 30
    tident        go to state 31
    operand       go to state 43


State 10

    4 statement: _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 44
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 11

    0 $accept: start • $end

    $end  shift, and go to state 45


State 12

    1 start: program •

    $default  reduce using rule 1 (start)


State 13

    2 program: statement •

    $default  reduce using rule 2 (program)


State 14

   21 statement: arrayelement • _IS unops _SEPARATOR statement
   22          | arrayelement • _IS operand _SEPARATOR statement

    _IS  shift, and go to state 46


State 15

    5 statement: ident • ':' _SEPARATOR statement
    6          | ident • ':' _ARRAYTYPE operand ',' _BYTEARRAYTYPE ',' operand _SEPARATOR statement
    7          | ident • ':' _ARRAYTYPE operand ',' _WORDARRAYTYPE ',' operand _SEPARATOR statement
    8          | ident • ':' _ARRAYTYPE operand ',' _LONGARRAYTYPE ',' operand _SEPARATOR statement
    9          | ident • ':' _ARRAYTYPE operand ',' _DOUBLEARRAYTYPE ',' operand _SEPARATOR statement
   10          | ident • ':' _ARRAYTYPE operand ',' _ASCIIARRAYTYPE ',' operand _SEPARATOR statement
   11          | ident • ':' _WORDTYPE iconst _SEPARATOR statement
   12          | ident • ':' _LONGTYPE iconst _SEPARATOR statement
   13          | ident • ':' _DOUBLETYPE dconst _SEPARATOR statement
   14          | ident • ':' _BYTETYPE cconst _SEPARATOR statement
   15          | ident • ':' _ASCIITYPE sconst _SEPARATOR statement
   16          | ident • _IS binop _SEPARATOR statement
   17          | ident • _IS operand _SEPARATOR statement
   18          | ident • _IS unops _SEPARATOR statement
   19          | ident • _IS arrunops _SEPARATOR statement
   20          | ident • _IS arrayelement _SEPARATOR statement
   32          | ident • _IS _CALL rfunc ',' iconst _SEPARATOR statement
   34          | ident • _IS _CALL convfunc ',' iconst _SEPARATOR statement
   36          | ident • _IS _CALL ident ',' iconst _SEPARATOR statement
   81 arrayelement: ident • '[' iconst ']'
   82             | ident • '[' ident ']'
   83             | ident • '[' tident ']'

    ':'  shift, and go to state 47
    '['  shift, and go to state 48
    _IS  shift, and go to state 49


State 16

   23 statement: tident • _IS binop _SEPARATOR statement
   24          | tident • _IS operand _SEPARATOR statement
   25          | tident • _IS unops _SEPARATOR statement
   26          | tident • _IS arrunops _SEPARATOR statement
   27          | tident • _IS arrayelement _SEPARATOR statement
   31          | tident • _IS _CALL rfunc ',' iconst _SEPARATOR statement
   33          | tident • _IS _CALL convfunc ',' iconst _SEPARATOR statement
   35          | tident • _IS _CALL ident ',' iconst _SEPARATOR statement

    _IS  shift, and go to state 50


State 17

   49 statement: _IFTRUE arrayelement • _GOTO ident _SEPARATOR statement

    _GOTO  shift, and go to state 51


State 18

   45 statement: _IFTRUE ident • _GOTO ident _SEPARATOR statement
   81 arrayelement: ident • '[' iconst ']'
   82             | ident • '[' ident ']'
   83             | ident • '[' tident ']'

    '['    shift, and go to state 48
    _GOTO  shift, and go to state 52


State 19

   47 statement: _IFTRUE tident • _GOTO ident _SEPARATOR statement

    _GOTO  shift, and go to state 53


State 20

   48 statement: _IFFALSE arrayelement • _GOTO ident _SEPARATOR statement

    _GOTO  shift, and go to state 54


State 21

   44 statement: _IFFALSE ident • _GOTO ident _SEPARATOR statement
   81 arrayelement: ident • '[' iconst ']'
   82             | ident • '[' ident ']'
   83             | ident • '[' tident ']'

    '['    shift, and go to state 48
    _GOTO  shift, and go to state 55


State 22

   46 statement: _IFFALSE tident • _GOTO ident _SEPARATOR statement

    _GOTO  shift, and go to state 56


State 23

   38 statement: _GOTO ident • _SEPARATOR statement

    _SEPARATOR  shift, and go to state 57


State 24

   96 operand: _DCONST •

    $default  reduce using rule 96 (operand)


State 25

   97 operand: _DCONSTE •

    $default  reduce using rule 97 (operand)


State 26

   95 operand: _ICONST •

    $default  reduce using rule 95 (operand)


State 27

   93 operand: _CCONST •

    $default  reduce using rule 93 (operand)


State 28

   94 operand: _SCONST •

    $default  reduce using rule 94 (operand)


State 29

   29 statement: _PUTPARAM arrayelement • _SEPARATOR statement

    _SEPARATOR  shift, and go to state 58


State 30

   81 arrayelement: ident • '[' iconst ']'
   82             | ident • '[' ident ']'
   83             | ident • '[' tident ']'
   91 operand: ident •

    '['  shift, and go to state 48

    $default  reduce using rule 91 (operand)


State 31

   92 operand: tident •

    $default  reduce using rule 92 (operand)


State 32

   28 statement: _PUTPARAM operand • _SEPARATOR statement

    _SEPARATOR  shift, and go to state 59


State 33

   41 statement: _GETPARAM arrayelement • _SEPARATOR statement

    _SEPARATOR  shift, and go to state 60


State 34

   39 statement: _GETPARAM ident • _SEPARATOR statement
   81 arrayelement: ident • '[' iconst ']'
   82             | ident • '[' ident ']'
   83             | ident • '[' tident ']'

    '['         shift, and go to state 48
    _SEPARATOR  shift, and go to state 61


State 35

   40 statement: _GETPARAM tident • _SEPARATOR statement

    _SEPARATOR  shift, and go to state 62


State 36

   73 wfunc: _IWRITE •

    $default  reduce using rule 73 (wfunc)


State 37

   74 wfunc: _FWRITE •

    $default  reduce using rule 74 (wfunc)


State 38

   75 wfunc: _CWRITE •

    $default  reduce using rule 75 (wfunc)


State 39

   76 wfunc: _SWRITE •

    $default  reduce using rule 76 (wfunc)


State 40

   30 statement: _CALL wfunc • ',' iconst _SEPARATOR statement

    ','  shift, and go to state 63


State 41

   37 statement: _CALL ident • ',' iconst _SEPARATOR statement

    ','  shift, and go to state 64


State 42

   43 statement: _RETURN arrayelement • _SEPARATOR statement

    _SEPARATOR  shift, and go to state 65


State 43

   42 statement: _RETURN operand • _SEPARATOR statement

    _SEPARATOR  shift, and go to state 66


State 44

    4 statement: _SEPARATOR statement •

    $default  reduce using rule 4 (statement)


State 45

    0 $accept: start $end •

    $default  accept


State 46

   21 statement: arrayelement _IS • unops _SEPARATOR statement
   22          | arrayelement _IS • operand _SEPARATOR statement

    _ID       shift, and go to state 1
    _IDTEMP   shift, and go to state 2
    _DCONST   shift, and go to state 24
    _DCONSTE  shift, and go to state 25
    _ICONST   shift, and go to state 26
    _CCONST   shift, and go to state 27
    _SCONST   shift, and go to state 28
    '!'       shift, and go to state 67
    '-'       shift, and go to state 68

    unops    go to state 69
    ident    go to state 70
    tident   go to state 31
    operand  go to state 71


State 47

    5 statement: ident ':' • _SEPARATOR statement
    6          | ident ':' • _ARRAYTYPE operand ',' _BYTEARRAYTYPE ',' operand _SEPARATOR statement
    7          | ident ':' • _ARRAYTYPE operand ',' _WORDARRAYTYPE ',' operand _SEPARATOR statement
    8          | ident ':' • _ARRAYTYPE operand ',' _LONGARRAYTYPE ',' operand _SEPARATOR statement
    9          | ident ':' • _ARRAYTYPE operand ',' _DOUBLEARRAYTYPE ',' operand _SEPARATOR statement
   10          | ident ':' • _ARRAYTYPE operand ',' _ASCIIARRAYTYPE ',' operand _SEPARATOR statement
   11          | ident ':' • _WORDTYPE iconst _SEPARATOR statement
   12          | ident ':' • _LONGTYPE iconst _SEPARATOR statement
   13          | ident ':' • _DOUBLETYPE dconst _SEPARATOR statement
   14          | ident ':' • _BYTETYPE cconst _SEPARATOR statement
   15          | ident ':' • _ASCIITYPE sconst _SEPARATOR statement

    _ARRAYTYPE   shift, and go to state 72
    _BYTETYPE    shift, and go to state 73
    _WORDTYPE    shift, and go to state 74
    _LONGTYPE    shift, and go to state 75
    _DOUBLETYPE  shift, and go to state 76
    _ASCIITYPE   shift, and go to state 77
    _SEPARATOR   shift, and go to state 78


State 48

   81 arrayelement: ident '[' • iconst ']'
   82             | ident '[' • ident ']'
   83             | ident '[' • tident ']'

    _ID      shift, and go to state 1
    _IDTEMP  shift, and go to state 2
    _ICONST  shift, and go to state 79

    ident   go to state 80
    tident  go to state 81
    iconst  go to state 82


State 49

   16 statement: ident _IS • binop _SEPARATOR statement
   17          | ident _IS • operand _SEPARATOR statement
   18          | ident _IS • unops _SEPARATOR statement
   19          | ident _IS • arrunops _SEPARATOR statement
   20          | ident _IS • arrayelement _SEPARATOR statement
   32          | ident _IS • _CALL rfunc ',' iconst _SEPARATOR statement
   34          | ident _IS • _CALL convfunc ',' iconst _SEPARATOR statement
   36          | ident _IS • _CALL ident ',' iconst _SEPARATOR statement

    _ID       shift, and go to state 1
    _IDTEMP   shift, and go to state 2
    _DCONST   shift, and go to state 24
    _DCONSTE  shift, and go to state 25
    _ICONST   shift, and go to state 26
    _CCONST   shift, and go to state 27
    _SCONST   shift, and go to state 28
    _CALL     shift, and go to state 83
    '!'       shift, and go to state 84
    '-'       shift, and go to state 85

    binop         go to state 86
    unops         go to state 87
    arrunops      go to state 88
    arrayelement  go to state 89
    ident         go to state 30
    tident        go to state 31
    operand       go to state 90


State 50

   23 statement: tident _IS • binop _SEPARATOR statement
   24          | tident _IS • operand _SEPARATOR statement
   25          | tident _IS • unops _SEPARATOR statement
   26          | tident _IS • arrunops _SEPARATOR statement
   27          | tident _IS • arrayelement _SEPARATOR statement
   31          | tident _IS • _CALL rfunc ',' iconst _SEPARATOR statement
   33          | tident _IS • _CALL convfunc ',' iconst _SEPARATOR statement
   35          | tident _IS • _CALL ident ',' iconst _SEPARATOR statement

    _ID       shift, and go to state 1
    _IDTEMP   shift, and go to state 2
    _DCONST   shift, and go to state 24
    _DCONSTE  shift, and go to state 25
    _ICONST   shift, and go to state 26
    _CCONST   shift, and go to state 27
    _SCONST   shift, and go to state 28
    _CALL     shift, and go to state 91
    '!'       shift, and go to state 84
    '-'       shift, and go to state 85

    binop         go to state 92
    unops         go to state 93
    arrunops      go to state 94
    arrayelement  go to state 95
    ident         go to state 30
    tident        go to state 31
    operand       go to state 96


State 51

   49 statement: _IFTRUE arrayelement _GOTO • ident _SEPARATOR statement

    _ID  shift, and go to state 1

    ident  go to state 97


State 52

   45 statement: _IFTRUE ident _GOTO • ident _SEPARATOR statement

    _ID  shift, and go to state 1

    ident  go to state 98


State 53

   47 statement: _IFTRUE tident _GOTO • ident _SEPARATOR statement

    _ID  shift, and go to state 1

    ident  go to state 99


State 54

   48 statement: _IFFALSE arrayelement _GOTO • ident _SEPARATOR statement

    _ID  shift, and go to state 1

    ident  go to state 100


State 55

   44 statement: _IFFALSE ident _GOTO • ident _SEPARATOR statement

    _ID  shift, and go to state 1

    ident  go to state 101


State 56

   46 statement: _IFFALSE tident _GOTO • ident _SEPARATOR statement

    _ID  shift, and go to state 1

    ident  go to state 102


State 57

   38 statement: _GOTO ident _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 103
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 58

   29 statement: _PUTPARAM arrayelement _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 104
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 59

   28 statement: _PUTPARAM operand _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 105
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 60

   41 statement: _GETPARAM arrayelement _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 106
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 61

   39 statement: _GETPARAM ident _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 107
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 62

   40 statement: _GETPARAM tident _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 108
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 63

   30 statement: _CALL wfunc ',' • iconst _SEPARATOR statement

    _ICONST  shift, and go to state 79

    iconst  go to state 109


State 64

   37 statement: _CALL ident ',' • iconst _SEPARATOR statement

    _ICONST  shift, and go to state 79

    iconst  go to state 110


State 65

   43 statement: _RETURN arrayelement _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 111
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 66

   42 statement: _RETURN operand _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 112
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 67

   65 unops: '!' • operand

    _ID       shift, and go to state 1
    _IDTEMP   shift, and go to state 2
    _DCONST   shift, and go to state 24
    _DCONSTE  shift, and go to state 25
    _ICONST   shift, and go to state 26
    _CCONST   shift, and go to state 27
    _SCONST   shift, and go to state 28

    ident    go to state 70
    tident   go to state 31
    operand  go to state 113


State 68

   64 unops: '-' • operand

    _ID       shift, and go to state 1
    _IDTEMP   shift, and go to state 2
    _DCONST   shift, and go to state 24
    _DCONSTE  shift, and go to state 25
    _ICONST   shift, and go to state 26
    _CCONST   shift, and go to state 27
    _SCONST   shift, and go to state 28

    ident    go to state 70
    tident   go to state 31
    operand  go to state 114


State 69

   21 statement: arrayelement _IS unops • _SEPARATOR statement

    _SEPARATOR  shift, and go to state 115


State 70

   91 operand: ident •

    $default  reduce using rule 91 (operand)


State 71

   22 statement: arrayelement _IS operand • _SEPARATOR statement

    _SEPARATOR  shift, and go to state 116


State 72

    6 statement: ident ':' _ARRAYTYPE • operand ',' _BYTEARRAYTYPE ',' operand _SEPARATOR statement
    7          | ident ':' _ARRAYTYPE • operand ',' _WORDARRAYTYPE ',' operand _SEPARATOR statement
    8          | ident ':' _ARRAYTYPE • operand ',' _LONGARRAYTYPE ',' operand _SEPARATOR statement
    9          | ident ':' _ARRAYTYPE • operand ',' _DOUBLEARRAYTYPE ',' operand _SEPARATOR statement
   10          | ident ':' _ARRAYTYPE • operand ',' _ASCIIARRAYTYPE ',' operand _SEPARATOR statement

    _ID       shift, and go to state 1
    _IDTEMP   shift, and go to state 2
    _DCONST   shift, and go to state 24
    _DCONSTE  shift, and go to state 25
    _ICONST   shift, and go to state 26
    _CCONST   shift, and go to state 27
    _SCONST   shift, and go to state 28

    ident    go to state 70
    tident   go to state 31
    operand  go to state 117


State 73

   14 statement: ident ':' _BYTETYPE • cconst _SEPARATOR statement

    _CCONST  shift, and go to state 118

    cconst  go to state 119


State 74

   11 statement: ident ':' _WORDTYPE • iconst _SEPARATOR statement

    _ICONST  shift, and go to state 79

    iconst  go to state 120


State 75

   12 statement: ident ':' _LONGTYPE • iconst _SEPARATOR statement

    _ICONST  shift, and go to state 79

    iconst  go to state 121


State 76

   13 statement: ident ':' _DOUBLETYPE • dconst _SEPARATOR statement

    _DCONST   shift, and go to state 122
    _DCONSTE  shift, and go to state 123

    dconst  go to state 124


State 77

   15 statement: ident ':' _ASCIITYPE • sconst _SEPARATOR statement

    _SCONST  shift, and go to state 125

    sconst  go to state 126


State 78

    5 statement: ident ':' _SEPARATOR • statement

    _ID         shift, and go to state 1
    _IDTEMP     shift, and go to state 2
    _IFTRUE     shift, and go to state 3
    _IFFALSE    shift, and go to state 4
    _GOTO       shift, and go to state 5
    _PUTPARAM   shift, and go to state 6
    _GETPARAM   shift, and go to state 7
    _CALL       shift, and go to state 8
    _RETURN     shift, and go to state 9
    _SEPARATOR  shift, and go to state 10

    $default  reduce using rule 3 (statement)

    statement     go to state 127
    arrayelement  go to state 14
    ident         go to state 15
    tident        go to state 16


State 79

   86 iconst: _ICONST •

    $default  reduce using rule 86 (iconst)


State 80

   82 arrayelement: ident '[' ident • ']'

    ']'  shift, and go to state 128


State 81

   83 arrayelement: ident '[' tident • ']'

    ']'  shift, and go to state 129


State 82

   81 arrayelement: ident '[' iconst • ']'

    ']'  shift, and go to state 130


State 83
